// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`barrel-maker cli > main B with args 1`] = `
"// ACME
export * from "./atoms/Button.js";
export * from "./icons/Icon.js";
export * from "./molecules/Card.js";
export type * from "./atoms/types.js";
"
`;

exports[`barrel-maker cli > main B with args 2`] = `
[
  "atoms/Button.tsx",
  "atoms/types.ts",
  "atoms/types.d.ts",
  "icons/Icon.tsx",
  "molecules/Card.tsx",
  "molecules/Card.test.tsx",
  "molecules/Card.stories.tsx",
]
`;

exports[`barrel-maker cli > main C without header 1`] = `
"export * from "./atoms/Button.js";
export * from "./icons/Icon.js";
export * from "./molecules/Card.js";
export type * from "./atoms/types.js";
"
`;

exports[`barrel-maker cli > main C without header 2`] = `
[
  "atoms/Button.tsx",
  "atoms/types.ts",
  "atoms/types.d.ts",
  "icons/Icon.tsx",
  "molecules/Card.tsx",
  "molecules/Card.test.tsx",
  "molecules/Card.stories.tsx",
]
`;

exports[`barrel-maker cli > make A ext empty and default index.ts 1`] = `
"// Copyright ACME
export * from "./atoms/Button";
export * from "./icons/Icon";
export * from "./molecules/Card";
export type * from "./atoms/types";
"
`;

exports[`barrel-maker cli > make A ext empty and default index.ts 2`] = `
[
  "atoms/Button.tsx",
  "atoms/types.ts",
  "atoms/types.d.ts",
  "icons/Icon.tsx",
  "molecules/Card.tsx",
  "molecules/Card.test.tsx",
  "molecules/Card.stories.tsx",
]
`;

exports[`barrel-maker cli > make B index.js and ext .js 1`] = `
"// Copyright ACME
export * from "./atoms/Button.js";
export * from "./icons/Icon.js";
export * from "./molecules/Card.js";
export type * from "./atoms/types.js";
"
`;

exports[`barrel-maker cli > make B index.js and ext .js 2`] = `
[
  "atoms/Button.tsx",
  "atoms/types.ts",
  "atoms/types.d.ts",
  "icons/Icon.tsx",
  "molecules/Card.tsx",
  "molecules/Card.test.tsx",
  "molecules/Card.stories.tsx",
]
`;

exports[`barrel-maker cli > make C undefined ext 1`] = `
"export * from "./atoms/Button.tsx";
export * from "./icons/Icon.tsx";
export * from "./molecules/Card.tsx";
export type * from "./atoms/types.ts";
"
`;

exports[`barrel-maker cli > make C undefined ext 2`] = `
[
  "atoms/Button.tsx",
  "atoms/types.ts",
  "atoms/types.d.ts",
  "icons/Icon.tsx",
  "molecules/Card.tsx",
  "molecules/Card.test.tsx",
  "molecules/Card.stories.tsx",
]
`;
